# linear_form

./: CMakeLists.txt  main.c
tests/: Test.c  Test.h  dataForComplexTest.txt  dataForIntegerTest.txt  dataForRealTest.txt
types/: Complex.c  Complex.h  Integer.c  Integer.h  Real.c  Real.h
utility/: Exception.c  Exception.h  FieldInfo.h  Interface.c  Interface.h  LinearForm.c  LinearForm.h
